# pure-python-sha256

./: .gitignore  README.md  pyproject.toml  requirements.txt  sha256.py  test_sha256.py
