[project]
name = "pure-python-sha256"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=0.971",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.13.0",
]

[tool.ruff]
exclude = [".env", ".mypy_cache", ".ruff_cache", ".vscode"]

line-length = 150
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "I", "W", "F", "N", "UP", "ARG"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.13"

check_untyped_defs = true
disallow_incomplete_defs = true

ignore_missing_imports = true

show_absolute_path = true
show_error_context = true
show_column_numbers = true

warn_return_any = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
